markdown fix for migration